--- a/civic_voice_frontend/src/App.css
+++ b/civic_voice_frontend/src/App.css
@@ -1,5 +1,27 @@
 .navbar {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
+.loginRegisterBG{
+  background-image: url("https://www.bitsathy.ac.in/wp-content/uploads/ew-what-is-generative-ai-model-1.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.boxx{
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(12px);
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 12px;
+  color: #000;
+}
+.logo{
+  width:80px;
+  margin-left: 40px;
 }
 .problems{
   display: flex;
@@ -15,9 +37,9 @@
   border: 0.1px solid black;
   height: 40px;
 }
-.admin {
+.adminBG {
   min-height: 100vh;
-  background: url("https://images.unsplash.com/photo-1465447142348-e9952c393450");
+  background-image: url("https://th.bing.com/th/id/OIG4.21NpOOI8XGZodk4k04xI?pid=ImgGn");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
